manifest/envoy/envoyfilter.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: ingressgateway-filter
  namespace: default
spec:
  workloadLabels:
    app: istio-ingressgateway
  filters:
  - listenerMatch:
      portNumber: 443
      listenerType: ANY
    filterName: envoy.lua
    filterType: HTTP
    filterConfig:
      inlineCode: |
        function envoy_on_request(request_handle)
          local xff_header = request_handle:headers():get("X-Forwarded-For")
          local first_ip = string.gmatch(xff_header, "(%d+.%d+.%d+.%d+)")();
          request_handle:headers():add("X-Custom-User-IP", first_ip);
        end
