manifest/envoy/kubesphere.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ingress-gateway
  namespace: kubesphere-system
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
...
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kubesphere
  namespace: kubesphere-system
spec:
  hosts:
    - "xxxxxxxxxx"
  gateways:
    - ingress-gateway
  http:
    - route:
        - destination:
            host: ks-console
            port:
              number: 80

...
