manifest/envoy/skywalking.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: skywalking-ui
  namespace: dev
spec:
  hosts:
  - ""
  gateways:
  - ingress-gateway
  http:
  - match:
    - uri:
        prefix: /manage
    route:
    - destination:
        host: skywalking-ui
        port:
          number: 80
...
